--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-ENERGY=20 GeV
-
-spring.datasource.url=jdbc:mysql://localhost:3306/webbanlaptop
-
-spring.datasource.username=root
-
-spring.datasource.password=
-
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-
+JDBC_DATABASE_DRIVER=com.mysql.jdbc.Driver;
+JDBC_DATABASE_PASSWORD=;
+JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/webbanlaptop;
+JDBC_DATABASE_USERNAME=root;
 SPRING_JPA_HIBERNATE_DIALECT=org.hibernate.dialect.MySQLDialect
